--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
   </section>
 
   <!-- Portfolio Grid -->
-  <section class="bg-light page-section" id="portfolio">
+  <!-- <section class="bg-light page-section" id="portfolio">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Actors and actresses</h2>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
@@ -217,12 +217,12 @@
             <p class="text-muted">Photography</p>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
-  </section>
+  </section> -->
 
   <!-- About -->
-  <section class="page-section" id="about">
+  <!-- <section class="page-section" id="about">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -300,7 +300,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Team -->
   <section class="bg-light page-section" id="team">
