--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#services">Hotels</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Actors and actresses</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
