--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Hotels</a>
-          </li>
+   
           <!-- <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Actors and actresses</a>
           </li>
@@ -56,6 +54,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#services">Hotels</a>
+            </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#maps">Maps</a>
           </li>
@@ -77,57 +78,7 @@
   </header>
 
  
-  <!-- Services -->
-  <section class="page-section" id="services">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Hotels</h2>
-        </div>
-      </div>
-      <section class="py-5">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-3 col-sm-6">
-              <a href="#">
-                <img class="img-fluid d-block mx-auto" src="img/hotels/1.png" alt="">
-              </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-              <a href="#">
-                <img class="img-fluid d-block mx-auto grand" src="img/hotels/2.png" alt="">
-              </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-              <a href="#">
-                <img class="img-fluid d-block mx-auto hyatt" src="img/hotels/3.png" alt="">
-              </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-              <a href="#">
-                <img class="img-fluid d-block mx-auto aloft" src="img/hotels/4.png" alt="">
-              </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-              <a href="#">
-                <img class="img-fluid d-block mx-auto aloft" src="img/hotels/5.png" alt="">
-              </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-              <a href="#">
-                <img class="img-fluid d-block mx-auto aloft" src="img/hotels/6.png" alt="">
-              </a>
-            </div>
-            <div class="col-md-3 col-sm-6">
-              <a href="#">
-                <img class="img-fluid d-block mx-auto aloft" src="img/hotels/7.png" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
-  </section>
+
 
   <!-- Portfolio Grid -->
   <!-- <section class="bg-light page-section" id="portfolio">
@@ -137,7 +88,7 @@
           <h2 class="section-heading text-uppercase">Actors and actresses</h2>
         </div>
       </div>
-      <!-- <div class="row">
+     <div class="row">
         <div class="col-md-4 col-sm-6 portfolio-item">
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
             <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
@@ -217,90 +168,11 @@
             <p class="text-muted">Photography</p>
           </div>
         </div>
-      </div> -->
+      </div> 
     </div>
-  </section> -->
+  </section>  -->
 
-  <!-- About -->
-  <!-- <section class="page-section" id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">About</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="timeline">
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>2009-2011</h4>
-                  <h4 class="subheading">Our Humble Beginnings</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>March 2011</h4>
-                  <h4 class="subheading">An Agency is Born</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>December 2012</h4>
-                  <h4 class="subheading">Transition to Full Service</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4>July 2014</h4>
-                  <h4 class="subheading">Phase Two Expansion</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section> -->
+  
 
   <!-- Team -->
   <section class="bg-light page-section" id="team">
@@ -314,73 +186,25 @@
         <div class="col-sm-4">
           <div class="team-member">
             <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-            <h4>RONY ALEJANDRO</h4>
-            <p class="text-muted">Lead Designer</p>
+            <h4>RONY ALEJANDRO SURIANO HERNANDEZ</h4>
+            <p class="text-muted">PRESIDENT</p>
           </div>
         </div>
         <div class="col-sm-4">
             <div class="team-member">
               <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-              <h4>JAVIER DIMAS </h4>
-              <p class="text-muted">Lead Designer</p>
+              <h4>CARLOS JAVIER DIMAS GÓMEZ </h4>
+              <p class="text-muted">EVENT PLANNER</p>
             </div>
           </div>
           <div class="col-sm-4">
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-                <h4>RACIRDO VELA</h4>
-                <p class="text-muted">Lead Designer</p>
+                <h4>RICARDO VELA CUPUL</h4>
+                <p class="text-muted">PRESIDENT</p>
               </div>
             </div>
-            <div class="col-sm-4">
-                <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="">
-                  <h4>ELIZABETH BERE</h4>
-                  <p class="text-muted">Lead Designer</p>
-                </div>
-              </div>
-              <div class="col-sm-4">
-                  <div class="team-member">
-                    <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="">
-                    <h4>CARLOS RIVERA</h4>
-                    <p class="text-muted">Lead Designer</p>
-                  </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="team-member">
-                      <img class="mx-auto rounded-circle" src="img/team/6.jpg" alt="">
-                      <h4>AMINE</h4>
-                      <p class="text-muted">Lead Designer</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                      <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/7.jpg" alt="">
-                        <h4>CESAR POLO</h4>
-                        <p class="text-muted">Lead Designer</p>
-                      </div>
-                    </div>
-                    <div class="col-sm-4">
-                        <div class="team-member">
-                          <img class="mx-auto rounded-circle" src="img/team/8.jpg" alt="">
-                          <h4>Nombre</h4>
-                          <p class="text-muted">Lead Designer</p>
-                        </div>
-                      </div>        <div class="col-sm-4">
-                          <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="img/team/AlfonsoBalderasTorres.jpg" alt="">
-                            <h4>ALFONSO BALDERAS T</h4>
-                            <p class="text-muted">IT</p>
-                          </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="team-member">
-                              <img class="mx-auto rounded-circle" src="img/team/RaulMiguelAngelCruzSanchez.jpg" alt="">
-                              <h4>RUAL MIGUEL ANGEL CRUZ</h4>
-                              <p class="text-muted">DESIGNER AND VIDEO EDITION
-                                </p>
-                            </div>
-                          </div>
+         <a href="team.html"><button type="button" class="btn btn-outline-warning">Work team</button></a> 
         </div>
       </div>
 
@@ -415,15 +239,68 @@
     </div>
   </section>
 
-  
+  <!-- Services -->
+  <section class="page-section" id="services">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Hotels</h2>
+        </div>
+      </div>
+      <section class="py-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3 col-sm-6">
+              <a href="#">
+                <img class="img-fluid d-block mx-auto" src="img/hotels/1.png" alt="">
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <a href="#">
+                <img class="img-fluid d-block mx-auto grand" src="img/hotels/2.png" alt="">
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <a href="#">
+                <img class="img-fluid d-block mx-auto hyatt" src="img/hotels/3.png" alt="">
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <a href="#">
+                <img class="img-fluid d-block mx-auto aloft" src="img/hotels/4.png" alt="">
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <a href="#">
+                <img class="img-fluid d-block mx-auto aloft" src="img/hotels/5.png" alt="">
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <a href="#">
+                <img class="img-fluid d-block mx-auto aloft" src="img/hotels/6.png" alt="">
+              </a>
+            </div>
+            <div class="col-md-3 col-sm-6">
+              <a href="#">
+                <img class="img-fluid d-block mx-auto aloft" src="img/hotels/7.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </section>
+
+        <div class="col-md-6 maps" id="maps">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.4441829484854!2d-86.74912278457259!3d21.134714385941155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2c09dc820c41%3A0x2f257685e799c209!2sCanc%C3%BAn%20ICC!5e0!3m2!1ses!2smx!4v1567833733710!5m2!1ses!2smx" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+
+        <div class="col-md-6 imgcancun">
+          <img src="img/cancunicc.jpg" alt="">
+        </div>     
 
 
 
-  <div class="container-fluid"></div>
-    <div class="map-responsive" id="maps">
-   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3721.4441829484854!2d-86.74912278457259!3d21.134714385941155!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4c2c09dc820c41%3A0x2f257685e799c209!2sCanc%C3%BAn%20ICC!5e0!3m2!1ses!2smx!4v1567579370193!5m2!1ses!2smx" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
-</div>
 
   <!-- Footer -->
   <footer class="footer">
@@ -456,10 +333,6 @@
 
   <!-- Portfolio Modals -->
 
-
-
-
- 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
