--- a/index.html
+++ b/index.html
@@ -5,11 +5,28 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
 
   <title>Festival Deaf en Cancun, México</title>
-
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicon//apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicon/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicon/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicon/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicon/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicon/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicon/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="img/favicon/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -45,12 +62,12 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
    
-          <!-- <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Actors and actresses</a>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#theaters">Theaters</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
-          </li> -->
+            <a class="nav-link js-scroll-trigger" href="#conference">Conferences</a>
+          </li> 
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
@@ -72,7 +89,7 @@
         <div class="intro-lead-in">June 26 to July 3, 2022</div>
         
 <a href="https://logwork.com/countdown-f64" class="countdown-timer" data-timezone="America/Mazatlan" data-date="2022-06-26 00:00" data-background="#817b7b" data-digitscolor="#ffffff">Time</a>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services"><i class="fas fa-ticket-alt"></i> Ticket</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://festival-deaf-en-cancun-mexico-2022.boletia.com"><i class="fas fa-ticket-alt"></i> Ticket</a>
       </div>
     </div>
   </header>
@@ -80,100 +97,93 @@
  
 
 
-  <!-- Portfolio Grid -->
-  <!-- <section class="bg-light page-section" id="portfolio">
+  <!-- theaters -->
+<section class="bg-light page-section" id="theaters">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Actors and actresses</h2>
+          <h2 class="section-heading text-uppercase">THEATERS</h2>
         </div>
       </div>
      <div class="row">
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
-            <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+        <div class="col-md-4 col-sm-6 theaters-item">
+          <a class="theaters-link" data-toggle="modal" href="#theatersModal1">
+            <img class="img-fluid" src="img/theaters/6t.png" alt="">
           </a>
-          <div class="portfolio-caption">
-            <h4>Threads</h4>
-            <p class="text-muted">Illustration</p>
+          <div class="theaters-caption">
+            <h4>IVONNE TELLEZ  AND BERENICE UGALDE</h4>
+            <p class="text-muted">MEXICO</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/02-thumbnail.jpg" alt="">
+        <div class="col-md-4 col-sm-6 theaters-item">
+          <a class="theaters-link" data-toggle="modal" href="#theatersModal2">
+            <img class="img-fluid" src="img/theaters/1.png" alt="">
           </a>
-          <div class="portfolio-caption">
-            <h4>Explore</h4>
-            <p class="text-muted">Graphic Design</p>
+          <div class="theaters-caption">
+            <h4>Aksu Ali</h4>
+            <p class="text-muted"></p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal3">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/03-thumbnail.jpg" alt="">
+        <div class="col-md-4 col-sm-6 theaters-item">
+          <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+            <img class="img-fluid" src="img/theaters/4t.png" alt="">
           </a>
-          <div class="portfolio-caption">
-            <h4>Finish</h4>
-            <p class="text-muted">Identity</p>
+          <div class="theaters-caption">
+            <h4>CALOGERO LA BELLA</h4>
+            <p class="text-muted">ITALY</p>
           </div>
         </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal4">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/04-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Lines</h4>
-            <p class="text-muted">Branding</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal5">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/05-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Southwest</h4>
-            <p class="text-muted">Website Design</p>
-          </div>
-        </div>
-        <div class="col-md-4 col-sm-6 portfolio-item">
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-            <div class="portfolio-hover">
-              <div class="portfolio-hover-content">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/portfolio/06-thumbnail.jpg" alt="">
-          </a>
-          <div class="portfolio-caption">
-            <h4>Window</h4>
-            <p class="text-muted">Photography</p>
-          </div>
+        <a href="theaters.html"><button type="button" class="btn btn-outline-warning">More</button></a>
         </div>
       </div> 
     </div>
-  </section>  -->
-
+  </section>  
   
 
+
+  <!-- conference -->
+  <section class="bg-light page-section" id="conference">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">CONFERENCES</h2>
+          </div>
+        </div>
+       <div class="row">
+          <div class="col-md-4 col-sm-6 conference-item">
+            <a class="conference-link" data-toggle="modal" href="#conferenceModal1">
+              <img class="img-fluid" src="img/conferences/1c.png" alt="">
+            </a>
+            <div class="conference-caption">
+              <h4>GABRIELA VALLS</h4>
+              <p class="text-muted">MEXICO</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 conference-item">
+            <a class="conference-link" data-toggle="modal" href="#conferenceModal2">
+              <img class="img-fluid" src="img/conferences/2c.png" alt="">
+            </a>
+            <div class="conference-caption">
+              <h4>DAVID NIEBREDING</h4>
+              <p class="text-muted"></p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 conference-item">
+            <a class="conference-link" data-toggle="modal" href="#conferenceModal3">
+              <img class="img-fluid" src="img/conferences/3c.png" alt="">
+            </a>
+            <div class="conference-caption">
+              <h4>RUBI GUDIÑO</h4>
+              <p class="text-muted">MEXICO</p>
+            </div>
+          </div>
+          <a href="conferences.html"><button type="button" class="btn btn-outline-warning">More</button></a>
+          </div>
+        </div> 
+      </div>
+    </section>  
+    
+  
   <!-- Team -->
   <section class="bg-light page-section" id="team">
     <div class="container">
@@ -185,7 +195,7 @@
       <div class="row">
         <div class="col-sm-4">
           <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
+            <img class="mx-auto rounded-circle" src="img/team/1.png" alt="">
             <h4>RONY ALEJANDRO SURIANO HERNANDEZ</h4>
             <p class="text-muted">PRESIDENT</p>
           </div>
@@ -204,7 +214,7 @@
                 <p class="text-muted">PRESIDENT</p>
               </div>
             </div>
-         <a href="team.html"><button type="button" class="btn btn-outline-warning">Work team</button></a> 
+         <a href="team.html"><button type="button" class="btn btn-outline-warning">Work Team</button></a> 
         </div>
       </div>
 
@@ -331,7 +341,7 @@
     </div>
   </footer>
 
-  <!-- Portfolio Modals -->
+  <!-- conference Modals -->
 
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
