--- a/theaters.html
+++ b/theaters.html
@@ -8,7 +8,8 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Team</title>
+  <title>Theaters</title>
+
   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/favicon//apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -26,7 +27,6 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="img/favicon/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -61,7 +61,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="#theaters">Theaters</a>
           </li>
         </ul>
       </div>
@@ -70,99 +70,46 @@
 
 
 
-
-  
-
-  <!-- Team -->
-  <section class="bg-light page-section" id="team">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Work Team</h2>
+  <!-- theaters -->
+  <section class="bg-light page-section" id="theaters">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">THEATERS</h2>
+          </div>
         </div>
-      </div>
-      <div class="row">
-          <div class="col-sm-4">
-              <div class="team-member">
-                <img class="mx-auto rounded-circle" src="img/team/4.jpg" alt="">
-                <h4>ELIZABETH BERE</h4>
-                <p class="text-muted">PERSONAL COMMITTEE</p>
-              </div>
+       <div class="row">
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal1">
+              <img class="img-fluid" src="img/theaters/nada.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4></h4>
+              <p class="text-muted"></p>
             </div>
-      
-            <div class="col-sm-4">
-                <div class="team-member">
-                  <img class="mx-auto rounded-circle" src="img/team/5.jpg" alt="">
-                  <h4>CARLOS RIVERA</h4>
-                  <p class="text-muted">PERSONAL COMMITTEE</p>
-                </div>
-              </div>
-            
-                <div class="col-sm-4">
-                    <div class="team-member">
-                      <img class="mx-auto rounded-circle" src="img/team/6.jpg" alt="">
-                      <h4>AMINE SÁADE</h4>
-                      <p class="text-muted">PERSONAL COMMITTEE</p>
-                    </div>
-                  </div>
-                  <div class="col-sm-4">
-                      <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/9.jpg" alt="">
-                        <h4>PIETRO SEMERARO</h4>
-                        <p class="text-muted">ACTORS EXECUTIVE COMMITTEE</p>
-                      </div>
-                    </div>
-                  <div class="col-sm-4">
-                      <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/8.jpg" alt="">
-                        <h4>ANA HERRERA</h4>
-                        <p class="text-muted">PACTOR</p>
-                      </div>
-                    </div>
-                  <div class="col-sm-4">
-                      <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="img/team/7.jpg" alt="">
-                        <h4>CESAR POLO</h4>
-                        <p class="text-muted">DESIGNER</p>
-                      </div>
-                    </div>
-                           <div class="col-sm-4">
-                          <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="img/team/AlfonsoBalderasTorres.jpg" alt="">
-                            <h4>ALFONSO BALDERAS T</h4>
-                            <p class="text-muted">Technology & Innovation</p>
-                          </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="team-member">
-                              <img class="mx-auto rounded-circle" src="img/team/RaulMiguelAngelCruzSanchez.jpg" alt="">
-                              <h4>RUAL MIGUEL ANGEL CRUZ</h4>
-                              <p class="text-muted">DESIGNER AND VIDEO EDITION
-                                </p>
-                            </div>
-                          </div>
-                          <div class="col-sm-4">
-                              <div class="team-member">
-                                <img class="mx-auto rounded-circle" src="img/team/10.jpg" alt="">
-                                <h4>JUAN PABLO</h4>
-                                <p class="text-muted">PERSONAL COMMITTEE
-                                  </p>
-                              </div>
-                            </div>
-                            <div class="col-sm-4">
-                                <div class="team-member">
-                                  <img class="mx-auto rounded-circle" src="img/team/11.jpg" alt="">
-                                  <h4>Sergio Isaac Torres Falconi</h4>
-                                  <p class="text-muted">PERSONAL COMMITTEE
-                                    </p>
-                                </div>
-                              </div>
-        </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal2">
+              <img class="img-fluid" src="img/theaters/nada.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4></h4>
+              <p class="text-muted"></p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/nada.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4></h4>
+              <p class="text-muted"></p>
+            </div>
+          </div>
+          </div>
+        </div> 
       </div>
-
-    </div>
-  </section>
-
+    </section>  
 
 
 
