--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <img class="img-fluid" src="img/theaters/1.png" alt="">
           </a>
           <div class="theaters-caption">
-            <h4>Aksu Ali</h4>
+            <h4>AKSU ALI</h4>
             <p class="text-muted"></p>
           </div>
         </div>
