--- a/conferences.html
+++ b/conferences.html
@@ -50,7 +50,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     
     <div class="container">
-           <a class="navbar-brand" href="#">
+           <a class="navbar-brand" href="index.html">
             <img src="img/logo.png" alt="">
           </a>
       <a class="navbar-brand js-scroll-trigger" href="index.html">Festival Deaf en Cancun, México</a>
