--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               <div class="team-member">
                 <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
                 <h4>RICARDO VELA CUPUL</h4>
-                <p class="text-muted">PRESIDENT</p>
+                <p class="text-muted">VICE-PRESIDENT</p>
               </div>
             </div>
          <a href="team.html"><button type="button" class="btn btn-outline-warning">Work Team</button></a> 
