--- a/hotels.html
+++ b/hotels.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Conferences</title>
+  <title>Card</title>
   <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/favicon//apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-icon-72x72.png">
@@ -88,142 +88,15 @@
 
 
   <!-- theaters -->
-  <section class="bg-light page-section" id="theaters">
+  <section class="bg-light page-section card" id="theaters">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 text-center">
-            <h2 class="section-heading text-uppercase">Confereces</h2>
+            <h2 class="section-heading text-uppercase">HOTELS</h2>
           </div>
         </div>
-       <div class="row">
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal1">
-              <img class="img-fluid" src="img/conferences/6.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>PIETRO SEMERARO</h4>
-              <p class="text-muted">ITALIA</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal2">
-              <img class="img-fluid" src="img/conferences/4.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>REINER MERTZ Y MAGDALENE GSRM</h4>
-              <p class="text-muted">ALEMANIA</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/11.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>HICHAM ISSAM</h4>
-              <p class="text-muted">LIBRANO</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/2.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>YARE PÉREZ</h4>
-              <p class="text-muted">MEXICO</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/7.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>PAUL DANIEL CRIPPS</h4>
-              <p class="text-muted">England, uk</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/13.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>CECILIA BELLO</h4>
-              <p class="text-muted">MEXICO</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/16.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>CREUZ DEL SILENCIO</h4>
-              <p class="text-muted">MEXICO</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/10.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>JORGE BASSIO</h4>
-              <p class="text-muted">ARGENTINA</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/12.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>CLIVE JOHN YOUG</h4>
-              <p class="text-muted">England,uk</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/1.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>TALIA KAREN BOSSIO</h4>
-              <p class="text-muted">ARGENTINA</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/3.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>SIMO ASH</h4>
-              <p class="text-muted">ALEMANIA</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/8.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>MELISSA ELMIRA YINGST</h4>
-              <p class="text-muted">USA</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/9.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4>ME HAMZEH FRITEKH</h4>
-              <p class="text-muted">PALESTINE</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 theaters-item">
-            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-              <img class="img-fluid" src="img/conferences/nada.png" alt="">
-            </a>
-            <div class="theaters-caption">
-              <h4></h4>
-              <p class="text-muted"></p>
-            </div>
-          </div>
-          </div>
-        </div> 
+        <img class="img-fluid card" src="img/h1.png" alt="">
+        <img class="img-fluid card" src="img/h2.png" alt="">
       </div>
     </section>  
 
