--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
             <a class="nav-link js-scroll-trigger" href="#conference">Conferences</a>
           </li> 
           <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#dj">Dj</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#das">DANCE AND SINGERS</a>
+          </li> 
+          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#team">Team</a>
           </li>
           <li class="nav-item">
@@ -89,6 +95,7 @@
         
 <a href="https://logwork.com/countdown-f64" class="countdown-timer" data-timezone="America/Mazatlan" data-date="2022-06-26 00:00" data-background="#817b7b" data-digitscolor="#ffffff">Time</a>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="https://festival-deaf-en-cancun-mexico-2022.boletia.com"><i class="fas fa-ticket-alt"></i> Ticket</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="card.html"><i class="far fa-credit-card"></i> Card</a>
       </div>
     </div>
   </header>
@@ -107,10 +114,10 @@
      <div class="row">
         <div class="col-md-4 col-sm-6 theaters-item">
           <a class="theaters-link" data-toggle="modal" href="#theatersModal1">
-            <img class="img-fluid" src="img/theaters/6t.png" alt="">
+            <img class="img-fluid" src="img/theaters/3.png" alt="">
           </a>
           <div class="theaters-caption">
-            <h4>IVONNE TELLEZ  AND BERENICE UGALDE</h4>
+            <h4>IVONNE TELLEZ Y BERENICE UGALDE</h4>
             <p class="text-muted">MEXICO</p>
           </div>
         </div>
@@ -120,16 +127,17 @@
           </a>
           <div class="theaters-caption">
             <h4>AKSU ALI</h4>
-            <p class="text-muted"></p>
+            <p class="text-muted">ALEMANIA</p>
           </div>
         </div>
         <div class="col-md-4 col-sm-6 theaters-item">
           <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
-            <img class="img-fluid" src="img/theaters/4t.png" alt="">
+            <img class="img-fluid" src="img/theaters/4.png" alt="">
           </a>
           <div class="theaters-caption">
-            <h4>CALOGERO LA BELLA</h4>
-            <p class="text-muted">ITALY</p>
+            <h4>CALOGERO LA BELLA Y ANNALISA
+              BETTO</h4>
+            <p class="text-muted">ITALIA</p>
           </div>
         </div>
         <a href="theaters.html"><button type="button" class="btn btn-outline-warning">More</button></a>
@@ -151,7 +159,7 @@
        <div class="row">
           <div class="col-md-4 col-sm-6 conference-item">
             <a class="conference-link" data-toggle="modal" href="#conferenceModal1">
-              <img class="img-fluid" src="img/conferences/1c.png" alt="">
+              <img class="img-fluid" src="img/conferences/14.png" alt="">
             </a>
             <div class="conference-caption">
               <h4>GABRIELA VALLS</h4>
@@ -160,16 +168,16 @@
           </div>
           <div class="col-md-4 col-sm-6 conference-item">
             <a class="conference-link" data-toggle="modal" href="#conferenceModal2">
-              <img class="img-fluid" src="img/conferences/2c.png" alt="">
+              <img class="img-fluid" src="img/conferences/15.png" alt="">
             </a>
             <div class="conference-caption">
               <h4>DAVID NIEBREDING</h4>
-              <p class="text-muted"></p>
+              <p class="text-muted">BRUSELAS</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 conference-item">
             <a class="conference-link" data-toggle="modal" href="#conferenceModal3">
-              <img class="img-fluid" src="img/conferences/3c.png" alt="">
+              <img class="img-fluid" src="img/conferences/5.png" alt="">
             </a>
             <div class="conference-caption">
               <h4>RUBI GUDIÑO</h4>
@@ -182,6 +190,59 @@
       </div>
     </section>  
     
+   <!-- dj -->
+
+   <section class="bg-light page-section" id="conference">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">DJ</h2>
+        </div>
+      </div>
+     <div class="row">
+        <div class="col-md-4 col-sm-6 conference-item">
+          <a class="conference-link" data-toggle="modal" href="#conferenceModal1">
+            <img class="img-fluid" src="img/dj/1.png" alt="">
+          </a>
+          <div class="conference-caption">
+            <h4>NICO DIMARCO</h4>
+            <p class="text-muted">USA</p>
+          </div>
+        </div>
+    </div>
+  </div> 
+</div>
+  </section>  
+     <!-- dance-and-singers -->
+     <section class="bg-light page-section" id="das">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2 class="section-heading text-uppercase">dance and singers</h2>
+          </div>
+        </div>
+       <div class="row">
+          <div class="col-md-4 col-sm-6 conference-item">
+            <a class="conference-link" data-toggle="modal" href="#conferenceModal1">
+              <img class="img-fluid" src="img/dance-and-singers/1.png" alt="">
+            </a>
+            <div class="conference-caption">
+              <h4>FELIPE LUIS Y VALENTINA SERRA</h4>
+              <p class="text-muted">COLOMBIA</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 conference-item">
+            <a class="conference-link" data-toggle="modal" href="#conferenceModal1">
+              <img class="img-fluid" src="img/dance-and-singers/2.png" alt="">
+            </a>
+            <div class="conference-caption">
+              <h4>CARLOS AMAYA</h4>
+              <p class="text-muted">MEXICO</p>
+            </div>
+          </div>
+      </div>
+    </div>
+    </section>  
   
   <!-- Team -->
   <section class="bg-light page-section" id="team">
@@ -297,6 +358,9 @@
           </div>
         </div>
       </section>
+      <div class="intro-text-centro">
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="hotels.html"><i class="fas fa-hotel"></i> Hotels</a>
+      </div>
     </div>
   </section>
 
