--- a/team.html
+++ b/team.html
@@ -60,7 +60,25 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+            <a class="nav-link js-scroll-trigger" href="index.html">Theaters</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Conferences</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Dj</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">DANCE AND SINGERS</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Team</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="index.html">Hotels</a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Maps</a>
           </li>
         </ul>
       </div>
