--- a/theaters.html
+++ b/theaters.html
@@ -60,7 +60,25 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#theaters">Theaters</a>
+            <a class="nav-link js-scroll-trigger" href="index.html">Theaters</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Conferences</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Dj</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">DANCE AND SINGERS</a>
+          </li> 
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Team</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="index.html">Hotels</a>
+            </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="index.html">Maps</a>
           </li>
         </ul>
       </div>
@@ -80,20 +98,112 @@
        <div class="row">
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal1">
-              <img class="img-fluid" src="img/theaters/nada.png" alt="">
+              <img class="img-fluid" src="img/theaters/8.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4></h4>
-              <p class="text-muted"></p>
+              <h4>ERNESTO Y LETICIA</h4>
+              <p class="text-muted"><EUA/p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
             <a class="theaters-link" data-toggle="modal" href="#theatersModal2">
-              <img class="img-fluid" src="img/theaters/nada.png" alt="">
+              <img class="img-fluid" src="img/theaters/14.png" alt="">
             </a>
             <div class="theaters-caption">
-              <h4></h4>
-              <p class="text-muted"></p>
+              <h4>JAVIER</h4>
+              <p class="text-muted">ESPAÑA</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/6.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>JOHN SMITM</h4>
+              <p class="text-muted">LONDRES</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/15.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>KULIRDV VIACHESLAV</h4>
+              <p class="text-muted">ITALIA</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/5.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>EDDY LOCO</h4>
+              <p class="text-muted">MEXICO</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/2.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>MOZARI AMADEUS</h4>
+              <p class="text-muted">ALEMANIA</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/10.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>NI MOLCHO Y ANNE NEF</h4>
+              <p class="text-muted">SUIZA</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/13.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>PETER ENESCU, ANA ENESCU y STEFAN
+                ALEXA</h4>
+              <p class="text-muted">ROMALIA</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/11.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>PINA PIAZZA, RENATA SCILIO, TAEIANA
+                TERRIBLLE y ENZO CANNATE</h4>
+              <p class="text-muted">ITALIA</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/12.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>RALF GADRBAVER</h4>
+              <p class="text-muted">ALEMANIA</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/9.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>RODY YAHYA</h4>
+              <p class="text-muted">PAGANG</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 theaters-item">
+            <a class="theaters-link" data-toggle="modal" href="#theatersModal3">
+              <img class="img-fluid" src="img/theaters/7.png" alt="">
+            </a>
+            <div class="theaters-caption">
+              <h4>Vincent Deboudt</h4>
+              <p class="text-muted">FRANCE</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 theaters-item">
