--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     
    <!-- dj -->
 
-   <section class="bg-light page-section" id="conference">
+   <section class="bg-light page-section" id="dj">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
